fix map-popover on iphone 6

--- a/src/sistemium-angular-bootstrap/styles/maps.scss
+++ b/src/sistemium-angular-bootstrap/styles/maps.scss
@@ -23,7 +23,7 @@
 
 }
 
-@media (max-width: 320px){
+@media (max-width: 420px){
   .with-map .popover{
     max-width: 250px;
     min-width: 100px;
@@ -33,3 +33,4 @@
     height: 270px;
   }
 }
+
